force-app/main/default/objects/BGR_Module_Assembly__c/BGR_Module_Assembly__c.object-meta.xml
<CustomObject>
    <label>BGR Module Assembly</label>
    <nameField>
        <label>BGR Module Assembly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Assembly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>