force-app/main/default/objects/BGR_Module_Assembly__c/fields/ASSYKITUPREQD__c.field-meta.xml
<CustomField>
    <fullName>ASSYKITUPREQD__c</fullName>
    <label>ASSYKITUPREQD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>