force-app/main/default/objects/BGR_Module_Assembly__c/fields/ASSYMODULEPN__c.field-meta.xml
<CustomField>
    <fullName>ASSYMODULEPN__c</fullName>
    <label>ASSYMODULEPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>