force-app/main/default/objects/BGR_Module_Assembly__c/fields/ASSYPHANTOM__c.field-meta.xml
<CustomField>
    <fullName>ASSYPHANTOM__c</fullName>
    <label>ASSYPHANTOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>