force-app/main/default/objects/BGR_Module_Assembly__c/fields/SGKITUPREQD__c.field-meta.xml
<CustomField>
    <fullName>SGKITUPREQD__c</fullName>
    <label>SGKITUPREQD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>