force-app/main/default/objects/BGR_Module_Assembly__c/fields/SGMODULEPN__c.field-meta.xml
<CustomField>
    <fullName>SGMODULEPN__c</fullName>
    <label>SGMODULEPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>