force-app/main/default/objects/BGR_Module_Assembly__c/fields/SGQTY__c.field-meta.xml
<CustomField>
    <fullName>SGQTY__c</fullName>
    <label>SGQTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>