force-app/main/default/objects/BGR_Module_Assembly__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Soft_Goods__c</columns>
    <columns>Size_Code__c</columns>
    <columns>SGKITUPREQD__c</columns>
    <columns>SGMODULEPN__c</columns>
    <columns>SGPHANTOM__c</columns>
    <columns>SGQTY__c</columns>
    <columns>Body_Mat_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>